# stock-price-prediction

./: .gitignore  README.md  catboost.ipynb  environment.py  evaluate.py  fetch_data.py  main.py  process_crypto.py  process_data.py  pyproject.toml  train.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
data/processed/: BHEL_1m_model_ready.csv
data/raw/: BHEL_1m.csv
scripts/fetch/: fetch_crypto.py  fetch_data.py
