[project]
name = "stock-price-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "yfinance>=1.1.0",
    "gymnasium>=0.29.0",
    "stable-baselines3>=2.3.0",
    "matplotlib>=3.9.0",
    "shimmy>=1.3.0",
    "tqdm>=4.67.3",
    "rich>=14.3.3",
    "setuptools<70",
    "tensorboard>=2.20.0",
    "ccxt>=4.5.39",
]
